# scadenze

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scadenze/: __init__.py  cli.py  data.py  export.py
scadenze/data/: scadenze_2026.json
scripts/: genera_dataset.py  genera_gif.py  genera_screenshot.py
tests/: test_cli.py  test_data.py  test_export.py
