[project]
name = "scadenze"
version = "0.1.0"
description = "Scadenze fiscali italiane 2026, dal terminale"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Nimesh Bothalage", email = "nimeshbflows@gmail.com" }]
keywords = ["fisco", "scadenze", "iva", "f24", "cli", "italia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Italian",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "icalendar>=6.0",
]

[project.urls]
Homepage = "https://nbflows.com"
Repository = "https://github.com/nbflows-managemente/scadenze"

[project.scripts]
scadenze = "scadenze.cli:app"

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scadenze"]
